# luminet_blackhole

./: .gitignore  Cargo.toml  README.md
benches/: image.rs  sampling.rs
src/: bin.rs
src/lib/: blackhole.rs  equations.rs  isoradial.rs  lib.rs  sample.rs  solvers.rs
src/lib/plotting/: dither.rs  flux.rs  gilbert.rs  isoradial.rs  mod.rs
